--- a/zemismart/packageManifest.json
+++ b/zemismart/packageManifest.json
@@ -1,10 +1,10 @@
 {
 	"packageName": "Zemismart Zigbee Blind",
 	"author": "Amos Yuen",
-	"version": "1.0.0",
+	"version": "2.0.0",
 	"minimumHEVersion": "0.0",
 	"dateReleased": "2021-03-09",
-	"releaseNotes" : "Initial release with added support of mode and speed.",
+	"releaseNotes" : "* Change tilt mode open()/close() commands to use set position to open/close all the way to match expected behavior.\n* Rename pause() to stop().\n* Remove superfluous setDirection() setMode() functions",
 	"documentationLink": "https://github.com/amosyuen/hubitat/blob/main/zemismart/README.md",
 	"communityLink": "https://community.hubitat.com/t/release-zemismart-zigbee-blind-driver/67525",
 	"drivers": [
@@ -14,7 +14,7 @@
 			"namespace": "amosyuen",
 			"location": "https://raw.githubusercontent.com/amosyuen/hubitat/main/zemismart/Zemismart%20Zigbee%20Blind.groovy",
 			"required": true,
-			"version": "1.0.0"
+			"version": "2.0.0"
 		}
 	]
 }
