--- a/eufysecurity/packageManifest.json
+++ b/eufysecurity/packageManifest.json
@@ -1,10 +1,10 @@
 {
 	"packageName": "Eufy Security (Alpha)",
 	"author": "Amos Yuen",
-	"version": "0.0.5",
+	"version": "0.0.6",
 	"minimumHEVersion": "0.0",
-	"dateReleased": "2021-03-09",
-	"releaseNotes" : "* Add support for battery.\n* Fix doorbell isStation check\n* Decode all base64 params for log param changes",
+	"dateReleased": "2021-03-26",
+	"releaseNotes" : "Fix logging issue in closures",
 	"documentationLink": "https://github.com/amosyuen/hubitat/blob/main/eufysecurity/README.md",
 	"communityLink": "https://community.hubitat.com/t/release-eufy-security-alpha/65487",
 	"apps": [
@@ -17,8 +17,8 @@
 			"required": true,
 			"oauth": false,
 			"primary": true,
-			"version": "0.0.5",
-			"betaVersion": "0.1.0"
+			"version": "0.0.6",
+			"betaVersion": "0.1.1"
 		}
 	],
 	"drivers": [
@@ -28,7 +28,7 @@
 			"namespace": "amosyuen",
 			"location": "https://raw.githubusercontent.com/amosyuen/hubitat/main/eufysecurity/Eufy%20Security%20Camera.groovy",
 			"required": true,
-			"version": "0.0.5"
+			"version": "0.0.6"
 		},
 		{
 			"id": "48ab58e4-6b85-11eb-9439-0242ac130002",
@@ -36,7 +36,7 @@
 			"namespace": "amosyuen",
 			"location": "https://raw.githubusercontent.com/amosyuen/hubitat/main/eufysecurity/Eufy%20Security%20Doorbell.groovy",
 			"required": true,
-			"version": "0.0.5"
+			"version": "0.0.6"
 		},
 		{
 			"id": "5c835f30-8e65-11eb-8dcd-0242ac130003",
@@ -45,7 +45,7 @@
 			"location": "https://raw.githubusercontent.com/amosyuen/hubitat/main/eufysecurity/Eufy%20Security%20Floodlight%20Camera.groovy",
 			"betaLocation": "https://raw.githubusercontent.com/amosyuen/hubitat/main/eufysecurity/beta/Eufy%20Security%20Floodlight%20Camera.groovy",
 			"version": "0.0.0",
-			"betaVersion": "0.1.0"
+			"betaVersion": "0.1.1"
 		},
 		{
 			"id": "458fd590-6b85-11eb-9439-0242ac130002",
@@ -53,7 +53,7 @@
 			"namespace": "amosyuen",
 			"location": "https://raw.githubusercontent.com/amosyuen/hubitat/main/eufysecurity/Eufy%20Security%20Station.groovy",
 			"required": true,
-			"version": "0.0.5"
+			"version": "0.0.6"
 		}
 	]
 }
