--- a/eightsleep/packageManifest.json
+++ b/eightsleep/packageManifest.json
@@ -1,10 +1,10 @@
 {
 	"packageName": "Eight Sleep (Connect)",
 	"author": "Amos Yuen",
-	"version": "4.0.2",
+	"version": "4.0.3",
 	"minimumHEVersion": "0.0",
-	"dateReleased": "2021-10-07",
-	"releaseNotes": "Fix bug with error logging for http calls",
+	"dateReleased": "2021-11-12",
+	"releaseNotes": "Downgrade refresh messages to debug",
 	"documentationLink": "https://github.com/amosyuen/hubitat/blob/main/eightsleep/README.md",
 	"communityLink": "https://community.hubitat.com/t/release-eight-sleep-community/60913/18",
 	"apps": [
@@ -26,7 +26,7 @@
 			"namespace": "amosyuen",
 			"location": "https://raw.githubusercontent.com/amosyuen/hubitat/main/eightsleep/Eight%20Sleep%20Mattress.groovy",
 			"required": true,
-			"version": "4.0.2"
+			"version": "4.0.3"
 		}
 	]
 }
